--- a/06_mood.Rmd
+++ b/06_mood.Rmd
@@ -17,14 +17,14 @@ Mood is a common outcome in EMA research [@Myin-Germeys2016; @Desmet2016]. Havin
 \index{Mood definitions!Emotions}
 The definition of mood varies across studies. Usually the concept refers to a general affective state. Following this line of reasoning, a distinction can be made between mood states (e.g. irritable, cheerful, relaxed, etc.) and discrete emotions (e.g. happy, sad, anxious, etc.), where moods are thought to be less specific and more subjective, enduring and related to context [@Beedie2005; @Cranford2006; @Desmet2016].
 
-Depending on the study focus and research questions, mood measurement can be operationalised in several ways. Therefore, it is vital to consider the goal of measuring mood in your own study and to choose an operationalization that matches your hypothesis and theoretical framework. In this chapter, we will discuss the most commonly used options: 1) uni-dimensional mood assessment, 2) the 'bag of items' approach, and 3) dimensional models, namely the Circumplex model and Negative and Positive affect (NA/PA).
+Depending on the study focus and research questions, mood measurement can be operationalized in several ways. Therefore, it is vital to consider the goal of measuring mood in your own study and to choose an operationalization that matches your hypothesis and theoretical framework. In this chapter, we will discuss the most commonly used options: 1) unidimensional mood assessment, 2) the 'bag of items' approach, and 3) dimensional models, namely the Circumplex model and Negative and Positive affect (NA/PA).
 
 ## Unidimensional mood assessment
-\index{Mood assessment!Uni-dimensional}
-Perhaps the most seemingly straight-forward method to measure mood is to ask 'face-valid' uni-dimensional questions such as "How is your mood right now" [@VanBallegooijen2016] or "How are you feeling right now" [@VandeVen2017].
-Respondents usually rate these questions on a Visual Analogue Scale (VAS), aimed to indicate mood intensity. Typically, VAS scales will range from zero (low or worst mood) to 10 or 100 (good or best mood). Keep in mind that the middle of a VAS scale (e.g. 5 or 50) is generally considered a negative result, and only scores above 6 or 60 are considered acceptable or positive mood states [@Groot2010]. In order to address this issue, some researchers have proposed to use VAS-scales ranging from -1 to 1, with 0 as a neutral centre. However, such a scale implies a mood state that ranges from negative to positive, rather than absent to present. Another alternative is to use Likert scales, where the scale centre often reflects a neutral response.   
+\index{Mood assessment!Unidimensional}
+Perhaps the most seemingly straight-forward method to measure mood is to ask 'face-valid' unidimensional questions such as "How is your mood right now" [@VanBallegooijen2016] or "How are you feeling right now" [@VandeVen2017].
+Respondents usually rate these questions on a Visual Analogue Scale (VAS), aimed to indicate mood intensity. Typically, VAS scales will range from zero (low or worst mood) to 10 or 100 (good or best mood). Keep in mind that the middle of a VAS scale (e.g. 5 or 50) is generally considered a negative result, and only scores above 6 or 60 are considered acceptable or positive mood states [@Groot2010]. In order to address this issue, some researchers have proposed to use VAS-scales ranging from -1 to 1, with 0 as a neutral center. However, such a scale implies a mood state that ranges from negative to positive, rather than absent to present. Another alternative is to use Likert scales, where the scale center often reflects a neutral response.   
 
-Plotting data from an uni-dimensional item in a graph is an easy way to visually inspect within-subject change in general mood:
+Plotting data from an unidimensional item in a graph is an easy way to visually inspect within-subject change in general mood:
 
 ```{r fig06a, fig.cap = "34 weeks of mood data, from a single participant"}
 # Code snippet 6.1: plotting data over time.
@@ -42,13 +42,13 @@ print(plotmood_down)
 ### Bipolar unidimensional items
 \index{Mood assessment!Bipolar uni-dimensional}
 Another option to assist respondents with the interpretation of one-item mood ratings, is to use a bipolar scale. These items place two opposing mood states at each end of the scale, for example by asking "Please rate your current mood on a scale of 0 to 100, on which 0 indicates happy, and 100 indicates sad" [@Vanrijsbergen2014]. This does assume that the opposing mood states, such as happy and sad, are mutually exclusive and thus cannot occur simultaneously.
-The bipolar-uni-dimensional method was shown to be able to predict time to relapse over 5.5 years in recurrently depressed out-patients, with 6.3% of variance in time to relapse explained. This percentage was comparable to that of the HAM-D [@Rijsbergen2012]. Also, the scale was able to detect relapse in patients with recurrent Major Depressive Disorder (based on SCID-I interview) at a cut-off score of 55, and outperformed the HAM-D and IDS-SR. However, 47% of patients indicated by the VAS scale did not fulfill formal criteria for relapse (false positives) [@Vanrijsbergen2014]. 
+The bipolar-unidimensional method was shown to be able to predict time to relapse over 5.5 years in recurrently depressed out-patients, with 6.3% of variance in time to relapse explained. This percentage was comparable to that of the HAM-D [@Rijsbergen2012]. Also, the scale was able to detect relapse in patients with recurrent Major Depressive Disorder (based on SCID-I interview) at a cut-off score of 55, and outperformed the HAM-D and IDS-SR. However, 47% of patients indicated by the VAS scale did not fulfill formal criteria for relapse (false positives) [@Vanrijsbergen2014]. 
   
 ## Bag-of-Items
 \index{Mood assessment!Bag-of-Items}
-In order to make sure all constructs of interest are measured, you can also consider including a number of specific mood items in your EMA questionnaire, rather than one general uni-polar item or one bipolar item. For example you can ask respondents "How depressed are you feeling right now" and "How anxious are you feeling right now [@Starr2012]. This strategy often leads to a 'bag-of-items' approach, where single items from various sources, such as existing questionnaires, are combined into a new EMA questionnaire. A benefit of this approach is that you can select items for which information on validity and test-retest reliability is available. A downside is that item scores can only be evaluated separately, rather that providing one overall indication of mood or well-being.
+In order to make sure all constructs of interest are measured, you can also consider including a number of specific mood items in your EMA questionnaire, rather than one general unipolar item or one bipolar item. For example, you can ask respondents "How depressed are you feeling right now" and "How anxious are you feeling right now [@Starr2012]. This strategy often leads to a 'bag-of-items' approach, where single items from various sources, such as existing questionnaires, are combined into a new EMA questionnaire. A benefit of this approach is that you can select items for which information on validity and test-retest reliability is available. A downside is that item scores can only be evaluated separately, rather that providing one overall indication of mood or well-being.
 
-Combining data from multiple items, such as mood and loneliness, in one graph can provide respondents with insight in the interaction between the constructs. In r two variables can easily be plotted together:
+Combining data from multiple items, such as mood and loneliness, in one graph can provide respondents with insight in the interaction between the constructs. In R two variables can easily be plotted together:
 
 ```{r fig69b, fig.cap = "34 weeks of combined mood data, from a single participant"}
 # Code snippet 6.2: Plotting multiple variables in one graph.
@@ -79,7 +79,7 @@ The Circumplex Model of affect [@russell1980circumplex; @Posner2005] argues that
 knitr::include_graphics("images/outcomes/Russell1980.png")
 ```
 
-There are several options to operationalise the Circumplex model in EMA research. For example, respondents can rate valence and arousal on two VAS scales. The most pragmatic approach is to report both scale scores separately [@Asselbergs2016]. Alternatively, scores can be combined to give insight into which of the four mood states (quadrants) respondents fall:
+There are several options to operationalize the Circumplex model in EMA research. For example, respondents can rate valence and arousal on two VAS scales. The most pragmatic approach is to report both scale scores separately [@Asselbergs2016]. Alternatively, scores can be combined to give insight into which of the four mood states (quadrants) respondents fall:
 
 - Low aroused - unpleasant
 - Low aroused - pleasant
@@ -99,7 +99,7 @@ knitr::include_graphics("images/outcomes/Circumplex-Pick-A-Mood.png")
 \index{Positive Affect|see{Mood assessment!PA/NA}} 
 \index{Positive and Negative Affect!PANAS|see{Mood assessment}}
 
-Watson and Tellegen [@watson1985] also specified the underlying theory of the Circumplex model, arguing that the diagonal quadrants represent Positive and Negative affect (PA/NA) and that these two terms are the main dimensions of affect [@Watson1999]. PA ranges from sadness to high energy, NA from calmness to distress [@Watson1988]. While bipolar-uni-dimensional assessment assumes that positive and negative affect are mutually exclusive, the PA/NA affect model assumes that these mood states can occur simultaneously. Watson and Clark [@Watson1997] for example, showed a moderate correlation between the two constructs (.32). 
+Watson and Tellegen [@watson1985] also specified the underlying theory of the Circumplex model, arguing that the diagonal quadrants represent Positive and Negative affect (PA/NA) and that these two terms are the main dimensions of affect [@Watson1999]. PA ranges from sadness to high energy, NA from calmness to distress [@Watson1988]. While bipolar-unidimensional assessment assumes that positive and negative affect are mutually exclusive, the PA/NA affect model assumes that these mood states can occur simultaneously. Watson and Clark [@Watson1997] for example, showed a moderate correlation between the two constructs (.32). 
 In order to measure Positive and Negative Affect, a designated Positive and Negative Affect Schedule was developed by Watson, Clark and Tellegen [@Watson1988]. Respondents are asked to indicate "to what extent you feel this way right now" on 20 affect items. The scale uses a 5-point Likert-scale, ranging from 1 (very slightly or not at all) to 5 (very) [@Watson1999]. Items include:
 
 - Negative Affect (10): afraid, scared, nervous, jittery, irritable, hostile, guilty, ashamed, upset, distressed 
