--- a/11_csd.Rmd
+++ b/11_csd.Rmd
@@ -19,11 +19,11 @@ reacts to disturbances. In a stable state, the system quickly recovers from
 disturbances. Prior to a transition to a new state, however, the system takes
 more and more time to recover back to its current state: the variance and auto-correlation of the system increases [@Scheffer2009; @Dakos2008]. 
 
-In this chapter, we re-analyse data from a study that aimed to demonstrate CSD
+In this chapter, we re-analyze data from a study that aimed to demonstrate CSD
 in EMA-data of a single patient with a history of major depression [@Groot2010,
 @Kossakowski2017; @Wichers2016]. The patient, a 57-year old male, used EMA to monitor himself during a 239-day single-case double-blind medication reduction trial. During the experiment, he experienced a relapse, and Wichers and colleagues showed how variance and auto-correlation in the EMA data increased, several weeks prior to this relapse. The transition appeared to be preceded by CSD.
 
-We will try to reconstruct the finding, using an alternative analysis strategy. One of the limitations of the Wicherts et al analysis is that autocorrelation was analysed at lag 1 only (i.e., only the correlation between t and t-1 was considered). With another analysis technique, called 'Detrended Fluctuation Analysis', all lags can be considered. 
+We will try to reconstruct the finding, using an alternative analysis strategy. One of the limitations of the Wichers et al analysis is that autocorrelation was analyzed at lag 1 only (i.e., only the correlation between t and t-1 was considered). With another analysis technique, called 'Detrended Fluctuation Analysis', all lags can be considered. 
 
 To conduct the analysis, we need three R packages: 
 
@@ -157,7 +157,7 @@ for (i in seq(window, max(csd$dayno), 7)) {
 
 ## Results
 
-We can now plot the DFA indicator over time, to see whether it peaks prior to the onset of the relapse. As can be seen, the DFA-indicator clearly pleaks prior to the onset of the relapse, around day 110. Interestingly, a second peak is reached at the end of the experiment, around day 239, possibly to indicate a recovery from the relapse. 
+We can now plot the DFA indicator over time, to see whether it peaks prior to the onset of the relapse. As can be seen, the DFA-indicator clearly peaks prior to the onset of the relapse, around day 110. Interestingly, a second peak is reached at the end of the experiment, around day 239, possibly to indicate a recovery from the relapse. 
 
 
 ```{r cs11f, eval = TRUE, out.width = "100%", fig.asp = .4, fig.cap = "Results of the DFA analysis.", warning = FALSE}
@@ -178,13 +178,14 @@ ggplot(na.omit(d),
 
 Our re-analysis replicates the main finding of the Wichers et al article ([@Wichers2016]): several weeks prior to a depression relapse, as predicted by complex systems theory, the variance and autocorrelation in EMA mood ratings increased.
 
-One swallow does not make summer. Yes, in this case, the DFA-indicator peaked prior to the relapse. This could be a mere coincidence. The predictive power of CSD needs to be confirmed in larger samples. Given the theoretical background, succesful applications of CSD in other domains, and the present finding, these studies seem warranted.
+One swallow does not make summer. Yes, in this case, the DFA-indicator peaked prior to the relapse. This could be a mere coincidence. The predictive power of CSD needs to be confirmed in larger samples. Given the theoretical background, successful applications of CSD in other domains, and the present finding, these studies seem warranted.
 
 Important additional questions remain to be answered. When it predicts a state change, what is the expected delay between this prediction and the change? Does a critical DFA-value exist? Given that critical value, are false positive and false negative rates of this prediction acceptable? These are important questions that should be answered before any clinical application of DFA can be considered.  
 
-Re-analysis of data from completed clinical studies, in which EMA data were collected, may be a first step to further explore the value of CSD. One option, for example, would be to re-analyse data from the E-COMPARED study [@Kleiboer2016]. In this trial, patients, who were treated for major depression, completed weekly self-report questionnaires [the Patient Health Questionnaire; PHQ-8, @Kroenke2009] and daily EMA mood ratings throughout treatment, which lasted up to 16-week. Since CSD is an indicator of *any* state change (i.e., irrespective of whether the change is clinically "good" or "bad"), theory would predict a (lagged) relationship between CSD (i.e., the DFA-score) and clinically significant changes in PHQ-scores [@Jacobson1991].
+Re-analysis of data from completed clinical studies, in which EMA data were collected, may be a first step to further explore the value of CSD. One option, for example, would be to re-analyze data from the E-COMPARED study [@Kleiboer2016]. In this trial, patients, who were treated for major depression, completed weekly self-report questionnaires [the Patient Health Questionnaire; PHQ-8, @Kroenke2009] and daily EMA mood ratings throughout treatment, which lasted up to 16-week. Since CSD is an indicator of *any* state change (i.e., irrespective of whether the change is clinically "good" or "bad"), theory would predict a (lagged) relationship between CSD (i.e., the DFA-score) and clinically significant changes in PHQ-scores [@Jacobson1991].
 
-Potential clinical applications, of course, are clear. If clinically relevant changes can be predicted algorithmitcally from EMA ratings, automated patient feedback systems could help to prevent pending deterioration or consolidate the path towards recovery.    
+Potential clinical applications, of course, are clear. If clinically relevant changes can be predicted algorithmically from EMA ratings, automated patient feedback systems could help to prevent pending deterioration or consolidate the path towards recovery.    
+
 
 
 
