--- a/book.bib
+++ b/book.bib
@@ -2,7 +2,7 @@
 
 @Article{AanhetRot2012,
   author          = {aan het Rot, Marije and Hogenelst, Koen and Schoevers, Robert A.},
-  title           = {Mood disorders in everyday life: a systematic review of experience sampling and ecological momentary assessment studies.},
+  title           = {Mood disorders in everyday life: A systematic review of experience sampling and ecological momentary assessment studies.},
   journal         = {Clinical psychology review},
   year            = {2012},
   volume          = {32},
@@ -602,7 +602,7 @@
   number = {4},
   pages = {e021745},
   pmid = {29643168},
-  title = {{Fatigue in patients with chronic obstructive pulmonary disease: Protocol of the Dutch multicentre, longitudinal, observational {\textless}i{\textgreater}FAntasTIGUE{\textless}/i{\textgreater} study}},
+  title = {{Fatigue in patients with chronic obstructive pulmonary disease: Protocol of the Dutch multicentre, longitudinal, observational FAntasTIGUE study}},
   url = {http://www.ncbi.nlm.nih.gov/pubmed/29643168{\%}0Ahttp://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC5898336{\%}0Ahttp://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2018-021745},
   volume = {8},
   year = {2018}
@@ -886,7 +886,7 @@
 
 @article{Lindert2018,
   title={Bright environmental light ameliorates deficient subjective ‘liking’in insomnia: An experience sampling study},
-  author={Te Lindert, Bart HW and Itzhacki, Jacob and van der Meijden, Wisse P and Kringelbach, Morten L and Mendoza, Jorge and Van Someren, Eus JW},
+  author={te Lindert, Bart HW and Itzhacki, Jacob and van der Meijden, Wisse P and Kringelbach, Morten L and Mendoza, Jorge and Van Someren, Eus JW},
   journal={Sleep},
   volume={41},
   number={4},
@@ -945,7 +945,7 @@ year = {1999}
 
 @article{Meijden2016,
   title={Individual differences in sleep timing relate to melanopsin-based phototransduction in healthy adolescents and young adults},
-  author={Van Der Meijden, Wisse P and Van Someren, Jamie L and Te Lindert, Bart HW and Bruijel, Jessica and Van Oosterhout, Floor and Coppens, Joris E and Kalsbeek, Andries and Cajochen, Christian and Bourgin, Patrice and Van Someren, Eus JW},
+  author={van Der Meijden, Wisse P and Van Someren, Jamie L and Te Lindert, Bart HW and Bruijel, Jessica and Van Oosterhout, Floor and Coppens, Joris E and Kalsbeek, Andries and Cajochen, Christian and Bourgin, Patrice and Van Someren, Eus JW},
   journal={Sleep},
   volume={39},
   number={6},
