--- a/01_EMA.Rmd
+++ b/01_EMA.Rmd
@@ -16,7 +16,7 @@
 \index{EMA synonyms!Continuous Unified Electronic Diary Method} 
 \index{EMA synonyms!Intensive-longitudinal Study Design} 
 
-Ecological Momentary Assessment (EMA) has many aliases. It is known as 'Experience Sampling' [@Larson1983], 'Ambulatory Assessment' [@EbnerPriemer2009] or 'Ambulatory Self-reporting' [@Conner2012a], 'Real-time Data Capturing', the 'Continuous Unified Electronic Diary Method' [@EllisDavies2012], and as the 'Intensive-longitudinal Study Design' [@Bolger2013]. The different terms stress different aspects of EMA research. All, however, refer to research methods that involve the *repeated sampling of people's current thoughts, emotions, behaviour, physiological states, and context, in their natural environment, typically (but not necessarily) via electronic wearable devices* [@Shiffman2008].
+Ecological Momentary Assessment (EMA) has many aliases. It is known as 'Experience Sampling' [@Larson1983], 'Ambulatory Assessment' [@EbnerPriemer2009] or 'Ambulatory Self-reporting' [@Conner2012a], 'Real-time Data Capturing', the 'Continuous Unified Electronic Diary Method' [@EllisDavies2012], and as the 'Intensive-longitudinal Study Design' [@Bolger2013]. The different terms stress different aspects of EMA research. All, however, refer to research methods that involve the *repeated sampling of people's current thoughts, emotions, behavior, physiological states, and context, in their natural environment, typically (but not necessarily) via electronic wearable devices* [@Shiffman2008].
 
 ### Active versus Passive EMA
 \index{EMA!Passive EMA} \index{EMA!Observational EMA|see{Passive EMA}}
@@ -24,7 +24,7 @@ Ecological Momentary Assessment (EMA) has many aliases. It is known as 'Experien
 
 In EMA research, two forms of data collection are distinguished: 1) 'Active EMA', with which *self-report* data are collected, and 2) 'Passive EMA', with which *observational* data are collected. Active EMA requires participants to consciously provide information, for example by rating their current mood in response to a question that is prompted on their smartphone (see Figure \@ref(fig:fig01a)). In passive EMA, information is collected through wearables or log files without active involvement of participants, for example on heart-rate, activity, smartphone use or engagement on social media (see Figure \@ref(fig:fig01b)).Studies may combine active and passive EMA. A study into sleep patterns, for example, may involve both a self-report sleep diary and an accelerometer sensor [@Meijden2016].
 
-```{r fig01a, echo = FALSE, out.width = '95%', fig.asp = .25, fig.align='center', fig.cap='Active EMA: data are collected by prompting questions to participants, for instance by using an EMA app such as MoodBuster. '}
+```{r fig01a, echo = FALSE, out.width = '95%', fig.asp = .25, fig.align='center', fig.cap='Active EMA: data are collected by prompting questions to participants, for instance by using an EMA app such as Moodbuster. '}
 library(png)
 library(grid)
 library(gridExtra)
@@ -45,7 +45,7 @@ grid.arrange(g, b, ncol=2, widths = c(100, 500))
 ```
 
 
-```{r fig01b, echo = FALSE, out.width = '100%', fig.asp = .25, fig.align='center', fig.cap='Passive EMA: data are collected automatically, for instance by accelerometers such as the GeneActive actiwatch.'}
+```{r fig01b, echo = FALSE, out.width = '100%', fig.asp = .25, fig.align='center', fig.cap='Passive EMA: data are collected automatically, for instance by accelerometers such as the GENEActive actiwatch.'}
 library(jpeg)
 library(grid)
 library(gridExtra)
@@ -115,9 +115,9 @@ A key feature of EMA is the collection of data in real-world environments, as pa
 \index{Nomothetic research} \index{Ideographic research} 
 \index{Intra-individual process|see{Ideographic research}}
 
-In clinical research, a distinction is often made between ideographic and nomothethic methods [@allport1937]. Idiographic methods are those that "aim to identify patterns of behaviour within the person across a population of experiences or situations, and nomothetic methods[are] those that aim to identify patterns of behaviour across a population of individuals, rather than for any given individual" [@Conner2009].  The difference is important. As is increasingly recognised, group-level findings do not necessarily generalize to the individual members of the group, as shown by Figure \@ref(fig:fig01c) (adapted from @Hamaker2012).
+In clinical research, a distinction is often made between *ideographic* and *nomothetic* methods [@allport1937]. Idiographic methods are those that "aim to identify patterns of behavior within the person across a population of experiences or situations, and nomothetic methods[are] those that aim to identify patterns of behavior across a population of individuals, rather than for any given individual" [@Conner2009].  The difference is important. As is increasingly recognized, group-level findings do not necessarily generalize to the individual members of the group, as shown by Figure \@ref(fig:fig01c) (adapted from @Hamaker2012).
 
-In contrast to more qualitative idiographic methods, such as interviews and N = 1 case studies, EMA allows for the collection of large amounts of quantitative data on the individual level. Thus, EMA offers a quantitative method for *idiographic* research, measuring characteristics of (unique) individuals across time and context [@Shiffman2008]. This allows for a better understanding of intra-individual process, and of the factors that account for variability within and between individuals.
+In contrast to more qualitative idiographic methods, such as interviews and N = 1 case studies, EMA allows for the collection of large amounts of quantitative data on the individual level. Thus, EMA offers a quantitative method for idiographic research, measuring characteristics of (unique) individuals across time and context [@Shiffman2008]. This allows for a better understanding of intra-individual process, and of the factors that account for variability within and between individuals.
 
 ```{r fig01c, fig.asp = .4, out.width = "100%", echo = FALSE, fig.cap = "An illustration of how group-level and individual-level processes can differ dramatically: the relationship between x on y is negative in the group (as shown by the descending regression line), but positive for individuals (marked by ellipses)."}
 
@@ -161,13 +161,13 @@ ggplot(dt, aes(x = X, y = Y, group = id)) +
 \index{Ecological Momentary Intervention}
 \index{EMI|see{Ecological Momentary Intervention}}
 
-EMA enables Ecological Momentary Interventions (EMI): interventions that that are provided to people during their everyday lives, in real time, and in their natural settings [@heron2010]. If dynamic disease processes can be adequately monitored in everyday-life through EMA, it should also be possible to intervene when EMA data reflect clear changes in these processes, in a way that is maximally effective given what is known about the indivudal. A key term in the last sentence, however, is "adequate". We should be aware of the "garbage-in/garbage-out principle". Before EMI's can be considered, the psychometric properties of EMA measures should be demonstrated first. 
+EMA enables Ecological Momentary Interventions (EMI): interventions that that are provided to people during their everyday lives, in real time, and in their natural settings [@heron2010]. If dynamic disease processes can be adequately monitored in everyday-life through EMA, it should also be possible to intervene when EMA data reflect clear changes in these processes, in a way that is maximally effective given what is known about the individual. A key term in the last sentence, however, is "adequate". We should be aware of the "garbage-in/garbage-out principle". Before EMI's can be considered, the psychometric properties of EMA measures should be demonstrated first. 
 
 ## EMA research findings: A birds-eye view
 
 The use of EMA in mental health research might seem novel but this methodology has a long track record. Already in the 1980's, early pioneers used electronic devices to elicit responses from study participants to tap into (mental) health processes in everyday life [see, e.g., @Csikszentmihalyi2014]. Recent years, however, have witnessed a large increase in EMA research. Rapid technological developments, a marked interest in the individual, and a wide recognition of the need to study health-related processes in real-life situations have all contributed to this. 
 
-EMA-based research in mental health has produced an impressive trove of findings that have supported and, sometimes, challenged existing theories on behaviour. EMA data, whether collected as self-report or via wearable device/sensor, have diagnostic, monitoring, management, or intervention applications (@Patel2012; @Aung2017; @Evenson2015]. Its feasibility for mental health research is evidenced by its use in observational studies and randomised controlled trials on a wide range of topics and populations. Below, we present a non-exhaustive summary of systematic reviews and meta-analyses of EMA research.
+EMA-based research in mental health has produced an impressive trove of findings that have supported and, sometimes, challenged existing theories on behavior. EMA data, whether collected as self-report or via wearable device/sensor, have diagnostic, monitoring, management, or intervention applications (@Patel2012; @Aung2017; @Evenson2015]. Its feasibility for mental health research is evidenced by its use in observational studies and randomized controlled trials on a wide range of topics and populations. Below, we present a non-exhaustive summary of systematic reviews and meta-analyses of EMA research.
 
 ### Active EMA
 \index{EMA!Active EMA}
@@ -187,17 +187,12 @@ Objective EMA data collected passively through bio-sensors, smart devices, or co
 While available reviews suggest that EMA is a feasible research method that has the potential to make significant contributions to mental health research, one significant drawback of EMA highlighted in several reviews is the lack of high-quality studies. Other general limitations considered include:
 
 \index{Limitations} 
-\index{Limitations!Selected samples}
-\index{Limitations!Practice effect}
-\index{Limitations!Feasibility}
-\index{Limitations!Privacy}
-
 -	Unclear generalizability of research findings due to selective samples [@burton2013], and small sample sizes [@Dogan2017]
 -	Unclear practice effects [@Telford2012], and issues related to reactivity [@Shiffman2009]
 -	Issues related to the feasibility and tolerability of prolonged and intense data periods of data collection [@Wichers2011]
 -	Issues of privacy, ethics and informed consent [@Cornet2017]
 -	Changing responsibilities of researchers and clinicians in EMA studies, e.g. in suicide ideation research [@Wenze2010]
-- Unresolved methodological issues (Dubad, 2018)
+- Unresolved methodological issues [@Dubad2018]
 
 \index{EMA research!Anxiety disorders}
 \index{EMA research!Eating disorders}
@@ -210,12 +205,12 @@ Table: (\#tab:emareviews) A selection of reviews of EMA studies targeting variou
 | **Topic** / **Author (Year)** | **Summary**                                             |
 |:------------------------------|:--------------------------------------------------------|
 | **Anxiety disorders**  | | 
-| @Walz2014              | Provides insights to the temporal variability of symptoms, and associations between daily affect, behaviours, and situational cues. Combination of EMA and ambulatory assessment of physiological variables and treatment evaluations. |
+| @Walz2014              | Provides insights to the temporal variability of symptoms, and associations between daily affect, behaviors, and situational cues. Combination of EMA and ambulatory assessment of physiological variables and treatment evaluations. |
 | @schueller2017         | Provides an overview of the distinction of EMIs from other types of treatment. Also discusses the considerations of conducting EMI research, such as design, deployment, and evaluation |
 | **Eating disorders**   | |
 | @Engel2016 | An overview of studies on eating disorders, obesity, and bariatric surgery using EMA |
 | **Mood disorders** | |
-| @AanhetRot2012     | Provides an overview of EMA studies on correlates of mood, treatment effects, residual symptoms of remitted patients, paediatric populations, MDD/BD specificity, and links with neuroscience |
+| @AanhetRot2012     | Provides an overview of EMA studies on correlates of mood, treatment effects, residual symptoms of remitted patients, pediatric populations, MDD/BD specificity, and links with neuroscience |
 | @Aung2017          | Provides a conceptual review of passive sensing techniques for measuring, understanding, and treatment of mental illness. |
 | @burton2013        | Focuses on diurnal variations in activity levels among depressed individuals. |
 | @Telford2012       | Identifies six themes of EMA research in MDD: methodology; positive and negative affect; cortisol secretion; antidepressant treatment; work performance; genetic risk factors |
@@ -227,7 +222,7 @@ Table: (\#tab:emareviews) A selection of reviews of EMA studies targeting variou
 | @Shiffman2009      | Review of processes that drive substance use, cessation, and relapse, sometimes in contrast with theory-driven studies that are largely derived from global reports collected through questionnaires |
 | @Swendsen2016      | Conceptual review of the use of mobile technologies for research on addiction and its treatment |
 | **Mental health/ Well-being** | | 
-| @Cornet2017        | Outlines the potential and challenges of passive sensing to detect status change and behaviour change following feedback on behaviour. |
+| @Cornet2017        | Outlines the potential and challenges of passive sensing to detect status change and behavior change following feedback on behavior. |
 | @kirchner2016      | Provides an overview of ' geographically explicit momentary assessment' (GEMA) research to enrich EMA research in mental health and well-being |
 | @Dogan2017         | Provides an overview of studies that combine subjective ratings with objective EMA-data collected using smartphone-based systems |
 
@@ -236,7 +231,7 @@ Table: (\#tab:emareviews) A selection of reviews of EMA studies targeting variou
 
 This manual comprises six parts, in which various aspects of EMA research will be discussed. 
 
-- In **part I**, Chapter \@ref(rstudio) introduces R, the statistical program that is an indespensable tool for the EMA researcher.
+- In **part I**, Chapter \@ref(rstudio) introduces R, the statistical program that is an indispensable tool for the EMA researcher.
 
 - **Part II** focuses on EMA study design (Chapter \@ref(methods), EMA instruments (Chapter \@ref(instruments)) and EMA data management (Chapter \@ref(datamanagement)).
 
@@ -246,6 +241,4 @@ This manual comprises six parts, in which various aspects of EMA research will b
 
 - In **part V**, the application of the preceding material is illustrated in two case studies: a study into the use EMA to detect early warnings signs of depression (Chapter \@ref(csd)), and a study into a new GPS-based measure of activity (Chapter \@ref(homerange)).
 
-- **Part VI** provides three catalogues of EMA resources. Chapter \@ref(catalogue) lists EMA research groups within APH, chapter \@ref(ema-instruments-catalogue) lists EMA instruments that were found to be in use among APH researchers, and Chapter \@ref(rcat) summarises useful R extensions (packages) for EMA data analysis.
-
-
+- **Part VI** provides three catalogues of EMA resources. Chapter \@ref(catalogue) lists EMA research groups within APH, chapter \@ref(ema-instruments-catalogue) lists EMA instruments that were found to be in use among APH researchers, and Chapter \@ref(rcat) summarizes useful R extensions (packages) for EMA data analysis.
