--- a/05_datamanagement.Rmd
+++ b/05_datamanagement.Rmd
@@ -7,7 +7,7 @@ In a typical EMA study, lots of data are collected. Repeated self-reports, GPS-d
 ## Using RStudio-projects 
 \index{RStudio Projects}
 
-RStudio projects can be opened by double-clicking existing projects, or by creating new projects from RStudio's file menu. To create a new project, choose "File | New Project...". You will be asked to specify the project name and its disk locatio (as shown in \@ref(fig:fig5a), after which the project will open in a new window.
+RStudio projects can be opened by double-clicking existing projects, or by creating new projects from RStudio's file menu. To create a new project, choose "File | New Project...". You will be asked to specify the project name and its disk location (as shown in \@ref(fig:fig5a), after which the project will open in a new window.
 
 ```{r fig5a, echo= FALSE, out.width = "70%", fig.cap =  "creating a project in RStudio"}
 knitr::include_graphics("images/datamanagement/new_project.png")
@@ -29,14 +29,17 @@ RStudio imposes no limitations to the contents of project directories. You are f
 * All analyses should be explicit and replicable
 * Output of (published) analyses should be saved
 
-A directory structure based on these guidelines is listed in Figure \@ref(fig:fig5b). It depicts the organisation of a project in which data were collected via: 
+A directory structure based on these guidelines is listed in Figure \@ref(fig:fig5b). It depicts the organization of a project in which data were collected via: 
+\index{QuestManager}
+\index{Movisens}
+\index{ GENEActive}
 
 1. an online survey system (QuestManager), to assess demographics and pre/post study depression severity (with the PHQ-9 questionnaire, @Kroenke2009), 
-2. an active EMA smartphone app (MoviSens - see Chapter \@ref(ema-instruments-catalogue)), to assess day-to-day changes in mood, and
-3. an accelerometer (GeneActive - see Chapter \@ref(ema-instruments-catalogue) to assess activity levels
+2. an active EMA smartphone app (Movisens - see Chapter \@ref(ema-instruments-catalogue)), to assess day-to-day changes in mood, and
+3. an accelerometer (GENEActive - see Chapter \@ref(ema-instruments-catalogue) to assess activity levels
 
 ```{r fig5b, echo = FALSE, fig.cap="Example project directory structure", out.width = "85%"}
-# Figure  5.2: Show the EMA R-project directory structure.
+# Figure 5.2: Show the EMA R-project directory structure.
 
 library(DiagrammeR)
 library(data.tree)
@@ -97,7 +100,7 @@ In "data/raw/questmanager", we find two files: 1) "qm_baseline_2018_05_01.csv", 
 
 In "data/raw/movisens", we find one file: "ms_mood_2018_05_01.csv", containing the results of the EMA mood measurements of all participants, exported from the back-office of the MoviSens application. 
 
-Finally, in "data/raw/geneactive", we see a series of ".bin" files: binary data files that were exported from the GeneaActive smart watches that were worn by the participants. Actigraphy data are high-volume data. These files are typically large (500GB per file is no exception). By using the .bin format, in which data is compressed, disk space is saved. Unlike the survey and EMA mood data, each data file in this directory contains data of one participant. In this case, there are even two files for one participant (APC009), perhaps because this participant started the study with a faulty device, which was swapped during the study. 
+Finally, in "data/raw/geneactive", we see a series of ".bin" files: binary data files that were exported from the GENEActive smart watches that were worn by the participants. Actigraphy data are high-volume data. These files are typically large (500GB per file is no exception). By using the .bin format, in which data is compressed, disk space is saved. Unlike the survey and EMA mood data, each data file in this directory contains data of one participant. In this case, there are even two files for one participant (APC009), perhaps because this participant started the study with a faulty device, which was swapped during the study. 
 
 In "data/raw", a final very important file is "key_file.csv". This file is important because it ties all the data together. It contains the unique identifiers that are assigned to the study participants in the various data collection systems. Ideally, of course, participants would be designated by a single ID in each data collection system. In practice, unfortunately, this is often not possible due to limitations of the systems used. As a result, researchers are forced to deal with the fact that participants are known under different ID's in each system. With a key-file, data can be tied together through scripts.
 
@@ -115,7 +118,7 @@ Table: (\#tab:tab5a) Example Study Key-file
 ## Scripts
 
 ### Import scripts
-In "scripts/import", we find the scripts with which the raw data are imported and cleaned, to produce ready-to-analyse data that is stored in "data/cleaned". 
+In "scripts/import", we find the scripts with which the raw data are imported and cleaned, to produce ready-to-analyze data that is stored in "data/cleaned". 
 
 By making these scripts parts of your project, you ensure that you and others can always trace the decisions that were made to prepare the raw data for analysis. Raw data may be updated, for instance because more participants are recruited, or because new data exports are made from the data collection systems. You may also detect errors in the import routines during the analyses, or peer reviewers may request information that can only be found by going back to the raw data. In all these cases, the availability of ready-to-run raw data import routines is critical.
 
@@ -151,11 +154,11 @@ save(baseline, file = "baseline.Rda")
 
 The code snippet above illustrates the importance of code documentation. You may struggle to immediately understand some of the code segments. For instance, you might not be familiar with the 'paste0()' function that is used to create the names of the variables that contain the PHQ-9 item scores. Fortunately, however, it becomes clear that the code statement calculates the sum of the item from the comment just above the code (the line starting with "#"). Use these comments in your code. You will do yourself and your colleagues a big favor by making it much easier to quickly grasp the meaning of your code.
 
-## Reproducable Analyses
+## Reproducible Analyses
 
-When raw data stored, imported and cleaned, final analyses can be run. By basing these analysis on the cleaned data in "data/cleaned", you ensure that these analyses can be fully reproduced from the raw study data.
+When raw data stored, imported and cleaned, final analyses can be run. By basing these analyses on the cleaned data in "data/cleaned", you ensure that these analyses can be fully reproduced from the raw study data.
 
-code snippet 5.2 below illustrates a typical analysis file: cleaned data are loaded into the R work environment, after which EMA scores of a single participant are selected, plotted and analysed in a simple linear regression. Both the plot and the result of the regression are saved in the analysis directory. The plot is saved as a PDF-file (ready for submission to the journal), and the regression results are saved in a standard R data structure. 
+code snippet 5.2 below illustrates a typical analysis file: cleaned data are loaded into the R work environment, after which EMA scores of a single participant are selected, plotted and analyzed in a simple linear regression. Both the plot and the result of the regression are saved in the analysis directory. The plot is saved as a PDF-file (ready for submission to the journal), and the regression results are saved in a standard R data structure. 
 
 ```{r cs5b, eval = FALSE}
 # Code Snippet 5.2: data analysis example
@@ -197,7 +200,7 @@ Note, finally, the "README.txt"" file in the root of the project directory. This
 | Title          | Project title & Acronym             |
 | Description    | One-paragraph project description    |
 | Author         | author name, e-mail affiliation      |
-| Getting Started| instructions on how to get the project up and running on a local machine for development.|
+| Getting Started| instructions on how to get the project up and running on a local machine for development. |
 | Prerequisites  | A listing of software required (i.e. R packages), and instructions on how to install this software |
 | Contents       | A listing of project directories, with a brief description of their contents |
 | Restrictions   | Notes about potential data access limitations |
@@ -205,9 +208,6 @@ Note, finally, the "README.txt"" file in the root of the project directory. This
 
 ## A final note
 
-In this chapter, we aimed to show how adopting the RStudio Project can help you to implement key principles of EMA data management, such as accountability, transparency and reproducability. To do so, we discussed the project structure of an illustrative small-scale EMA study. No doubt, your project will differ from this example in many ways, forcing you to deviate from the example structure. The example may be too elaborate, for example, if your project only requires you to analyse a single data file. The structure it certainly too limited to support the requirements of a full PHD project (such as the one described, for example, in the APH quality handbook - see http://www.emgo.nl/kc/folders-and-file-names/). But as we mentioned earlier, RStudio Projects are flexible. It should be relatively straightforward to scale down or scale up the example that we discussed. 
+In this chapter, we aimed to show how adopting the RStudio Project can help you to implement key principles of EMA data management, such as accountability, transparency and reproducibility. To do so, we discussed the project structure of an illustrative small-scale EMA study. No doubt, your project will differ from this example in many ways, forcing you to deviate from the example structure. The example may be too elaborate, for example, if your project only requires you to analyze a single data file. The structure it certainly too limited to support the requirements of a full PHD project (such as the one described, for example, in the APH quality handbook - see http://www.emgo.nl/kc/folders-and-file-names/). But as we mentioned earlier, RStudio Projects are flexible. It should be relatively straightforward to scale down or scale up the example that we discussed. 
 
 If you want to learn more about data management with R and RStudio, the book *"Reproducible Research with R and RStudio"* [@gandrud2015] would be a good place to start. You may also be informed by the data management techniques that are described in the first two chapters of the book *"Using Rand RStudio for Data Management, Statistical Analysis, and Graphics"* [@horton2015]. 
-
-
-
