--- a/08_features.Rmd
+++ b/08_features.Rmd
@@ -1,5 +1,5 @@
 ```{r include=FALSE, cache=FALSE}
-# # Reproducability --------------------------------------------------------------
+# # Reproducibility --------------------------------------------------------------
 # 
 # # fix random numbers
 # set.seed(1014)
@@ -42,7 +42,7 @@ library(emaph)
 # 
 ```
 ```{r include=FALSE, cache=FALSE}
-# # Reproducability --------------------------------------------------------------
+# # Reproducibility --------------------------------------------------------------
 # 
 # # fix random numbers
 # set.seed(1014)
@@ -89,7 +89,7 @@ library(emaph)
 
 # Feature Extraction {#features}
 
-EMA data are streams: time-series that represent processes that may span hours, days, weeks or even months. To the beginning EMA researcher, it may not be immediately clear how to deal with these data. How can these series be summarised to study differences between individuals or changes within individuals over time? What 'qualities' or 'featuresf of a time-series should be considered? What are the available options? 
+EMA data are streams: time-series that represent processes that may span hours, days, weeks or even months. To the beginning EMA researcher, it may not be immediately clear how to deal with these data. How can these series be summarized to study differences between individuals or changes within individuals over time? What 'qualities' or 'features' of a time-series should be considered? What are the available options? 
 
 In this chapter, we will discuss some of the features that can be extracted from EMA time-series.
 
@@ -97,7 +97,7 @@ In this chapter, we will discuss some of the features that can be extracted from
 
 We will focus on a simulated three-week time-series of EMA mood responses of a single person, in which ratings were collected five times per day. Figure \@ref(fig:fig8a) shows a plot of the simulated scores.
 
-Stare at the figure for a moment. How would you characterise the development of scores over time? What features would you want to extract? How would you quantify these features?
+Stare at the figure for a moment. How would you characterize the development of scores over time? What features would you want to extract? How would you quantify these features?
 
 ```{r echo = FALSE}
 ## Constructing the simulated EMA time-series
@@ -164,7 +164,7 @@ ggplot(e, aes(x = t, y = s)) +
 
 Features do not necessarily have to be complex. Familiar measures of central tendency of EMA time-series, such as the mode or the mean, can be useful predictors of traditional clinical assessments. Standard measures of the variability of EMA scores, such as the standard deviation (SD), have been shown to have diagnostic value (see, e.g., @bowen2006). You should not hesitate to consider these statistics when they help you to answer your research question.
 
-You should check, though, whether the implicit assumptions behind the statistics are correct. When you use the mean and the standard deviation to summarise a time-series, you assume that the data-generating process behind the series is stable over time (in technical terms: that this process is *stationary*, @wiki_Stationary_process). If this assumption is incorrect (i.e., if the process is unstable or non-stationary), the mean and SD are biased statistics.
+You should check, though, whether the implicit assumptions behind the statistics are correct. When you use the mean and the standard deviation to summarize a time-series, you assume that the data-generating process behind the series is stable over time (in technical terms: that this process is *stationary*, @wiki_Stationary_process). If this assumption is incorrect (i.e., if the process is unstable or non-stationary), the mean and SD are biased statistics.
 
 Our simulated EMA time-series is non-stationary, as can be seen in Figure \@ref(fig:fig8b). We observe a trend: the mood of the person increases over time. EMA scores tend to be below the mean in the beginning, and above the mean at the end. The overall mean (*M*  = `r round(mean(e$s), 1)`) overestimates the EMA scores of the first week (*M* = `r round(mean(e$s[e$t < 8]), 1)`), and underestimates the scores of the last week (*M* = `r round(mean(e$s[e$t > 13]), 1)`). If you use the overall mean as a feature of the time-series in your analyses, you ignore the mood improvements over the three-week period. In clinical research, your would probably not want to miss this other important feature.
 
@@ -189,9 +189,9 @@ ggplot(e, aes(x = t, y = s)) +
 fm = lm(s ~ t, e)
 ```
 
-Now that we know that the overall mean and SD are sub-optimal features of this time-series, the question is how we can do better. What other features can we extract? One option would be to characterise the series in simple regression terms, via an intercept and a slope. By doing so, we can economically describe the dynamics of the series with two numbers.
+Now that we know that the overall mean and SD are sub-optimal features of this time-series, the question is how we can do better. What other features can we extract? One option would be to characterize the series in simple regression terms, via an intercept and a slope. By doing so, we can economically describe the dynamics of the series with two numbers.
 
-As can be seen in Figure \@ref(fig:fig8c), the regression model provides a more realistic and informative summary. At the start, the estimated mean - the intercept - is `r round(coef(fm)[1], 1)`. This mean increases aproximately `r round(coef(fm)[2] * 7,  1)` points per day (the slope), to a final estimated mean of `r round(coef(fm)[1], 1) + round(coef(fm)[2] * 21, 1)`.
+As can be seen in Figure \@ref(fig:fig8c), the regression model provides a more realistic and informative summary. At the start, the estimated mean - the intercept - is `r round(coef(fm)[1], 1)`. This mean increases approximately `r round(coef(fm)[2] * 7,  1)` points per day (the slope), to a final estimated mean of `r round(coef(fm)[1], 1) + round(coef(fm)[2] * 21, 1)`.
 
 ```{r fig8c, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "EMA time-series, with a regression reference line (red) and the residual error SD range around this line (the area between the two blue lines)"}
 ggplot(e, aes(x = t, y = s)) +
@@ -229,9 +229,9 @@ p <- subset(p, Var2 == TRUE)
 fm2 <- lm(p$Freq ~ as.numeric(p$Var1))
 ```
 
-In EMA research, you should be prepared to deal with missing values. Especially with active EMA, in which participants have to consciously respond to prompted questions several times a day, non-response is inevitable. Missing values are typically considered to be a nuisance rather than a features of EMA time-series. Non-response, however, is an important characteristic, that may even have clinical relevance.
+In EMA research, you should be prepared to deal with missing values. Especially with active EMA, in which participants have to consciously respond to prompted questions several times a day, non-response is inevitable. Missing values are typically considered to be a nuisance rather than a feature of EMA time-series. Non-response, however, is an important characteristic, that may even have clinical relevance.
 
-Missing values are also present in our simulated EMA time-series example, as you may have found out already when you inspected Figure \@ref(fig:fig8a). The points, denoting the observed responses, are more dense in the beginning of the series. Over the course of the study period, the probability of missed ratings increases. This becomes immediately clear from Figure \@ref(fig:fig8e), in which the percentage of missed ratings is plotted per day. Every week, the probability of missed ratings increases `r round(coef(fm2)[2]*7*100)`%.
+Missing values are also present in our simulated EMA time-series example, as you may have found out already when you inspected Figure \@ref(fig:fig8a). The points, denoting the observed responses, are denser in the beginning of the series. Over the course of the study period, the probability of missed ratings increases. This becomes immediately clear from Figure \@ref(fig:fig8e), in which the percentage of missed ratings is plotted per day. Every week, the probability of missed ratings increases `r round(coef(fm2)[2]*7*100)`%.
 
 ```{r fig8e, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "Percentage of missed mood ratings, per day, over the three-week study period, with a regression line (red) superposed."}
 ggplot(p, aes(x = as.numeric(Var1), y = Freq * 100)) + 
