--- a/09_lmm.Rmd
+++ b/09_lmm.Rmd
@@ -5,10 +5,10 @@
 options(digits = 3)
 ```
 
-EMA data are time-series that are characterised by complex correlational structures, irregular sampling intervals, missing data, and substantive individual differences. Mixed models are well-suited to deal with these data. This chapter provides a brief introduction to conducting mixed models analysis of EMA data in R.
+EMA data are time-series that are characterized by complex correlational structures, irregular sampling intervals, missing data, and substantive individual differences. Mixed models are well-suited to deal with these data. This chapter provides a brief introduction to conducting mixed model analysis of EMA data in R.
 
 ## The Mixed Model
-Mixed modeling can be understood as a regression technique in which in separate regression functions are estimated for each cluster in the data set. In EMA data, these clusters are defined by the participants. Data from the same participant are expected to be correlated, and one way to honor this correlation is to conceptualise a separate regression for each participant. This idea, in the most simple regression model, can be expressed as: 
+Mixed modeling can be understood as a regression technique in which in separate regression functions are estimated for each cluster in the data set. In EMA data, these clusters are defined by the participants. Data from the same participant are expected to be correlated, and one way to honor this correlation is to conceptualize a separate regression for each participant. This idea, in the simplest regression model, can be expressed as: 
 
 \begin{equation} 
   Y_{ij} = intercept_{i} + \epsilon_{ij} 
@@ -22,7 +22,7 @@ The regression functions are, however, not independent. Mixed models divide the 
   intercept_{i} = intercept_{g} + intercept_{p} 
 \end{equation} 
 
-The group intercept is called the 'fixed' effect. If we would gather more data from  new participants, we would expect to find approximately the same group intercept.
+The group intercept is called the 'fixed' effect. If we would gather more data from new participants, we would expect to find approximately the same group intercept.
 
 The participant-specific component of the intercept is known as the 'random' effect. If we sample new data, we would expect a similar *variance* of the participant-specific intercept components around the group intercept. This "mixing" of fixed and random effects is what gives mixed modeling its name.
 
@@ -68,7 +68,7 @@ ggplot(subset(d1, id %in% unique(d1$id)[1:6]),
 ## Fitting a mixed model in R
 Now, let's fit a mixed model to the data, to see whether the simulation parameters are detected. For this, we will use the 'lme' function, from package 'nlme' [@R-nlme]. 
 
-The first argument of the lme function , 'Y ~ 1', specifies the fixed 'effect' (in this case: the mean intercept). The second argument, 'random = ~ 1 | id' specifies the random effect: in this model, intercepts are allowed to vary between participants. The fitted model is assigned to variable fm.
+The first argument of the lme function, 'Y ~ 1', specifies the fixed 'effect' (in this case: the mean intercept). The second argument, 'random = ~ 1 | id' specifies the random effect: in this model, intercepts are allowed to vary between participants. The fitted model is assigned to variable fm.
 
 ```{r cs9b}
 # Code snippet 9.2: Fitting a mixed model with lme.
@@ -142,7 +142,7 @@ fm <- lme(Y ~ 1 + time, random = ~ 1 + time | id,
 summary(fm)$tTable
 ```
 
-The random effects now has four components: the variance of the intercept, the variance of the slope, the residual error *and* the correlation between the random intercept and the random slope.
+The random effects now have four components: the variance of the intercept, the variance of the slope, the residual error *and* the correlation between the random intercept and the random slope.
 
 ```{r cs9h}
 # Code snippet 9.8: Extracting random effects.
@@ -163,7 +163,7 @@ ggplot(d2, aes(x = time, y = predY, group = id)) +
 ## Adding a Two-Group Comparison
 In data-set 1, mood ratings did not change during the week, while in data-set 2, the mood ratings increased. Suppose the two data-sets reflect the data that you collect in a two-group RCT, in which you compare the effects of a mental health intervention (data-set 2) against a waiting list condition (data-set 1). By combining the two data-sets, we can illustrate how to conduct a group comparison with 'lme'.
 
-Since the two data-sets are already available (in d1 and d2), the new data set can be created with just three lines of code (below). In the first line, the 'rbind' function is used to combine the rows of data-set 1 and 2 into a new variable:  data.frame d3. The second line adds a group indicator to d3. The third line updates the id's of the participants in the second group, to explicitly differentiate the participants in the second group from the participants in the first group.
+Since the two data-sets are already available (in d1 and d2), the new data set can be created with just three lines of code (below). In the first line, the 'rbind' function is used to combine the rows of data-set 1 and 2 into a new variable:  data.frame d3. The second line adds a group indicator to d3. The third line updates the ids of the participants in the second group, to explicitly differentiate the participants in the second group from the participants in the first group.
 
 ```{r cs9i}
 # Code snippet 9.9: two-group simulation.
@@ -197,6 +197,4 @@ ggplot(d3, aes(x = time, y = predY, group = id)) +
 
 In this chapter, we introduced mixed model analysis of EMA data. To do so, we could only touch upon the theoretical foundations of mixed models, and we deliberately used simple examples with clean simulated data. Readers, who consider the application of mixed models, are strongly advised to study additional resources.
 
-The authoritative reference for mixed effect modeling in R is a book by Pinheiro and Bates [-@Pinheiro2000]. To fully appreciate this book, however, a strong background in mathemathical statistics is required. Thorough introductions in the topic are further found in the work of Prof. dr. Jos Twisk [@twisk2006; @twisk2013], who also teaches an applied mixed models course at the Department of Epidemiology and Biostatistics at the Vrije Universiteit Medical Center (see: http://epidm.nl/en/courses/mixed-models/). 
-
-
+The authoritative reference for mixed effect modeling in R is a book by Pinheiro and Bates [-@Pinheiro2000]. To fully appreciate this book, however, a strong background in mathematical statistics is required. Thorough introductions in the topic are further found in the work of Prof. dr. Jos Twisk [@twisk2006; @twisk2013], who also teaches an applied mixed models course at the Department of Epidemiology and Biostatistics at the Vrije Universiteit Medical Center (see: http://epidm.nl/en/courses/mixed-models/). 
